1.1 Backported all the way to 1.13.2